--- a/app/pages/restaurants/restaurants.html
+++ b/app/pages/restaurants/restaurants.html
@@ -34,7 +34,10 @@
 
                 <div class="nav-author">
 
-                    <button class="btn-signin">Sign In</button>
+                    <!-- <button class="btn-signin">Sign In</button> -->
+                    <button class="btn__buy">
+                        <img src="../../assets/img/Buy.png" alt="">
+                    </button>
 
                     <button class="button-primary">Sign Up</button>
 
@@ -49,6 +52,59 @@
                     </div>
                 </div>
             </nav>
+            <div class="header__cart">
+                <div class="header__cart-wrap">
+                    <div class="header__cart-list">
+                        <div class="btn__close">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                <path d="M17 17L1 1M17 1L1 17" stroke="#191720" stroke-width="2" stroke-linecap="round" />
+                            </svg>
+                        </div>
+        
+                        <h4 class="header__cart-heading">
+                            The Burger Cafe
+                        </h4>
+                        <ul class="header__cart-list-item">
+                            <li class="header__cart-item">
+                                <div class="header__cart-item-img-quantity">
+                                    <img class="header__cart-item-img"
+                                        src="https://cf.shopee.vn/file/10ad3c23d56f4a55180ed0ac590c0860_tn" alt="">
+                                    <div class="header__cart-item-quantity">
+                                        <p class="header__cart-item-quantity-decrease">
+                                            -
+                                        </p>
+                                        <p class="header__cart-item-quantity-counts">
+                                            2
+                                        </p>
+                                        <p class="header__cart-item-quantity-increase">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"
+                                                fill="none">
+                                                <rect y="5.5" width="12" height="1" rx="0.5" fill="#575363" />
+                                                <rect x="5.5" y="12" width="12" height="1" rx="0.5"
+                                                    transform="rotate(-90 5.5 12)" fill="#575363" />
+                                            </svg>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="header__cart-item-info">
+                                    <div class="header__cart-item-head">
+                                        <h5 class="header__cart-item-name">
+                                            Eggs Benedict Burger
+                                        </h5>
+                                        <div class="header__cart-price-wrap">
+                                            <span class="header__cart-item-price">$15.00</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+        
+                        </ul>
+                        <div class="header__cart-footer">
+                            <div class="header__cart-view-cart">Go to Check Out $<p class="header__cart-view-cart-total">30.00</p></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </header>
     </div>
 
